--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 		"smsglobal.com",
 		"laravel 5"
 	],
+	"license": "MIT",
 	"authors": [
 		{
 			"name": "Joshua Chinemezu",
@@ -26,10 +27,21 @@
 		}
 	],
 	"minimum-stability": "dev",
+	"require": {
+		"php": "^7.0",
+		"illuminate/support": "^5.0|^6.0|^7.0|^8.0",
+		"guzzlehttp/guzzle": "5.*|6.*"
+	},
 	"autoload": {
+		"files": [
+			"src/Support/helpers.php"
+		],
 		"psr-4": {
 			"JoshuaChinemezu\\SmsGlobal\\": "src/"
 		}
+	},
+	"scripts": {
+		"test": "vendor/bin/phpunit"
 	},
 	"extra": {
 		"laravel": {
@@ -41,5 +53,9 @@
 			}
 		}
 	},
-	"require": {}
+	"require-dev": {
+		"phpunit/phpunit": "^9.2@dev",
+		"mockery/mockery": "^1.4@dev",
+		"orchestra/testbench": "^6.0@dev"
+	}
 }
